fix(toolbar): spacing between separator and adjacent element
In Angular rendering.

--- a/tests/visual/toolbar.html
+++ b/tests/visual/toolbar.html
@@ -665,6 +665,82 @@
             </div>
         </div>
 
+        <div class="section" style="clear: both;">
+            <kendo-toolbar class="k-widget k-toolbar k-toolbar-resizable" dir="ltr">
+                <kendo-toolbar-renderer style="visibility: visible; display: inline-block;">
+                    <button type="button" class="k-button k-button-icontext" dir="ltr">
+                        <span class="k-icon k-i-folder"></span>
+                        Browse
+                    </button>
+                </kendo-toolbar-renderer>
+                <kendo-toolbar-renderer style="visibility: visible; display: inline-block;">
+                    <div class="k-separator"></div>
+                </kendo-toolbar-renderer>
+                <kendo-toolbar-renderer style="visibility: visible; display: inline-block;">
+                    <button type="button" disabled="" class="k-button k-state-disabled k-primary" dir="ltr">
+                        Apply
+                    </button>
+                </kendo-toolbar-renderer>
+                <kendo-toolbar-renderer style="visibility: visible; display: inline-block;">
+                    <div class="k-separator"></div>
+                </kendo-toolbar-renderer>
+                <kendo-toolbar-renderer style="visibility: visible; display: inline-block;">
+                    <kendo-dropdownbutton class="k-widget k-dropdown-button" dir="ltr">
+                        <button type="button" class="k-button" dir="ltr">
+                            Dropdown button
+                        </button>
+                    </kendo-dropdownbutton>
+                </kendo-toolbar-renderer>
+                <kendo-toolbar-renderer style="visibility: visible; display: inline-block;">
+                    <div class="k-separator"></div>
+                </kendo-toolbar-renderer>
+                <kendo-toolbar-renderer style="visibility: visible; display: inline-block;">
+                    <button type="button" disabled="" class="k-button k-state-disabled" dir="ltr">
+                        Cancel
+                    </button>
+                </kendo-toolbar-renderer>
+                <kendo-toolbar-renderer style="visibility: visible; display: inline-block;">
+                    <div class="k-separator"></div>
+                </kendo-toolbar-renderer>
+                <kendo-toolbar-renderer style="visibility: visible; display: inline-block;">
+                    <kendo-buttongroup class="k-button-group" dir="ltr">
+                        <button type="button" class="k-button-icon k-button k-group-start" dir="ltr">
+                            <span class="k-icon k-i-bold" ></span>
+                        </button>
+                        <button type="button" class="k-button-icon k-button" dir="ltr">
+                            <span class="k-icon k-i-italic" ></span>
+                        </button>
+                        <button type="button" class="k-button-icon k-button k-group-end" dir="ltr">
+                            <span class="k-icon k-i-underline" role="presentation"></span>
+                        </button>
+                    </kendo-buttongroup>
+                </kendo-toolbar-renderer>
+                <kendo-toolbar-renderer style="visibility: visible; display: inline-block;">
+                    <div class="k-separator"></div>
+                </kendo-toolbar-renderer>
+                <kendo-toolbar-renderer style="visibility: visible; display: inline-block;">
+                    <kendo-buttongroup class="k-button-group" dir="ltr">
+                        <button type="button" class="k-button k-button-icontext k-group-start" dir="ltr">
+                            <span class="k-icon k-i-align-left"></span>
+                            Left
+                        </button>
+                        <button type="button" class="k-button k-button-icontext" dir="ltr">
+                            <span class="k-icon k-i-align-center">
+                            </span>
+                            Center
+                        </button>
+                        <button type="button" class="k-button k-button-icontext" dir="ltr">
+                            <span class="k-icon k-i-align-right"></span>
+                            Right
+                        </button>
+                        <button type="button" class="k-button k-button-icontext k-group-end" dir="ltr">
+                            <span class="k-icon k-i-align-justify"></span>
+                            Justify
+                        </button>
+                    </kendo-buttongroup>
+                </kendo-toolbar-renderer>
+        </div>
+
     </div>
 
 </body>
