chore(timeline): update tests for action button with long title

--- a/tests/visual/timeline-vertical-alternating.html
+++ b/tests/visual/timeline-vertical-alternating.html
@@ -76,7 +76,7 @@
                                 </div>
                             </div>
                             <div class="k-card-actions">
-                                <a class="k-button k-flat k-primary k-state-hover">Choose</a>
+                                <a class="k-button k-flat k-primary k-state-hover">A button with reallyyyyy long text that overflows and takes two rows</a>
                                 <a class="k-button k-flat k-primary">Book</a>
                                 <a class="k-button k-flat k-primary">Check</a>
                             </div>
