--- a/tests/visual/filter.html
+++ b/tests/visual/filter.html
@@ -20,7 +20,7 @@
                     <div class="k-filter-toolbar">
                         <div class="k-toolbar">
                             <div class="k-filter-toolbar-item">
-                                <span class="k-widget k-dropdown">
+                                <span class="k-widget k-dropdown k-filter-dropdown">
                                     <span class="k-dropdown-wrap k-state-default">
                                         <span class="k-input">And</span>
                                         <span class="k-select">
@@ -51,7 +51,7 @@
                             <div class="k-filter-toolbar">
                                 <div class="k-toolbar">
                                     <div class="k-filter-toolbar-item">
-                                        <span class="k-widget k-dropdown">
+                                        <span class="k-widget k-dropdown k-filter-dropdown">
                                             <span class="k-dropdown-wrap k-state-default">
                                                 <span class="k-input">Discontinued</span>
                                                 <span class="k-select">
@@ -61,7 +61,7 @@
                                         </span>
                                     </div>
                                     <div class="k-filter-toolbar-item">
-                                        <span class="k-widget k-dropdown">
+                                        <span class="k-widget k-dropdown k-filter-dropdown">
                                             <span class="k-dropdown-wrap k-state-default">
                                                 <span class="k-input">Is equal to</span>
                                                 <span class="k-select">
@@ -86,7 +86,7 @@
                             <div class="k-filter-toolbar">
                                 <div class="k-toolbar">
                                     <div class="k-filter-toolbar-item">
-                                        <span class="k-widget k-dropdown">
+                                        <span class="k-widget k-dropdown k-filter-dropdown">
                                             <span class="k-dropdown-wrap k-state-default">
                                                 <span class="k-input">UnitsInStock</span>
                                                 <span class="k-select">
@@ -96,7 +96,7 @@
                                         </span>
                                     </div>
                                     <div class="k-filter-toolbar-item">
-                                        <span class="k-widget k-dropdown">
+                                        <span class="k-widget k-dropdown k-filter-dropdown">
                                             <span class="k-dropdown-wrap k-state-default">
                                                 <span class="k-input">Is equal to</span>
                                                 <span class="k-select">
@@ -132,7 +132,7 @@
                             <div class="k-filter-toolbar">
                                 <div class="k-toolbar">
                                     <div class="k-filter-toolbar-item">
-                                        <span class="k-widget k-dropdown">
+                                        <span class="k-widget k-dropdown k-filter-dropdown">
                                         <span class="k-dropdown-wrap k-state-default">
                                             <span class="k-input">And</span>
                                             <span class="k-select">
@@ -162,38 +162,39 @@
                                 <li class="k-filter-item">
                                     <div class="k-filter-toolbar">
                                         <div class="k-toolbar">
-                                            <div class="k-filter-toolbar-item"><span class="k-widget k-dropdown">
-                                                <span class="k-dropdown-wrap k-state-default">
-                                                    <span class="k-input">And</span>
-                                                    <span class="k-select">
-                                                        <span class="k-icon k-i-arrow-60-down"></span>
+                                            <div class="k-filter-toolbar-item">
+                                                <span class="k-widget k-dropdown k-filter-dropdown">
+                                                    <span class="k-dropdown-wrap k-state-default">
+                                                        <span class="k-input">And</span>
+                                                        <span class="k-select">
+                                                            <span class="k-icon k-i-arrow-60-down"></span>
+                                                        </span>
                                                     </span>
                                                 </span>
-                                            </span>
-                                        </div>
-                                        <div class="k-filter-toolbar-item">
-                                            <button class="k-button k-button-icon">
-                                                <span class="k-icon k-i-filter-add-expression"></span>
-                                            </button>
-                                        </div>
-                                        <div class="k-filter-toolbar-item">
-                                            <button class="k-button k-button-icon">
-                                                <span class="k-icon k-i-filter-add-group"></span>
-                                            </button>
-                                        </div>
-                                        <div class="k-filter-toolbar-item">
-                                            <button class="k-button-flat k-button k-button-icon">
-                                                <span class="k-icon k-i-close"></span>
-                                            </button>
                                             </div>
+                                            <div class="k-filter-toolbar-item">
+                                                <button class="k-button k-button-icon">
+                                                    <span class="k-icon k-i-filter-add-expression"></span>
+                                                </button>
+                                            </div>
+                                            <div class="k-filter-toolbar-item">
+                                                <button class="k-button k-button-icon">
+                                                    <span class="k-icon k-i-filter-add-group"></span>
+                                                </button>
+                                            </div>
+                                            <div class="k-filter-toolbar-item">
+                                                <button class="k-button-flat k-button k-button-icon">
+                                                    <span class="k-icon k-i-close"></span>
+                                                </button>
+                                            </div>
+                                        </div>
                                     </div>
-                                </div>
                                     <ul class="k-filter-lines">
                                         <li class="k-filter-item">
                                             <div class="k-filter-toolbar">
                                                 <div class="k-toolbar">
                                                     <div class="k-filter-toolbar-item">
-                                                        <span class="k-widget k-dropdown">
+                                                        <span class="k-widget k-dropdown k-filter-dropdown">
                                                             <span class="k-dropdown-wrap k-state-default">
                                                                 <span class="k-input">DeliveryDate</span>
                                                                 <span class="k-select">
@@ -203,7 +204,7 @@
                                                         </span>
                                                     </div>
                                                     <div class="k-filter-toolbar-item">
-                                                        <span class="k-widget k-dropdown">
+                                                        <span class="k-widget k-dropdown k-filter-dropdown">
                                                             <span class="k-dropdown-wrap k-state-default">
                                                                 <span class="k-input">Is equal to</span>
                                                                 <span class="k-select">
